TRAC-5928 create collection popup & alignment fixes

--- a/src/app/collections/create-collection/create-collection.component.css
+++ b/src/app/collections/create-collection/create-collection.component.css
@@ -1,139 +1,91 @@
-.main-div {
-  width: 100%;
+::ng-deep .mat-dialog-container {
+  border-radius: 16px !important;
+}
+
+.dialog-header {
+  position: relative;
+  text-align: center;
+}
+
+.dialog-header label {
+  font-family: "Inter";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 24px;
+  line-height: 32px;
+  color: #2d2d2d;
+}
+
+.dialog-content {
+  font-family: "Inter";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 32px;
+  /* identical to box height, or 160% */
+
+  color: #232323;
+  margin-bottom: 15px;
+}
+
+.dialog-actions {
+  column-gap: 20px;
+  margin-bottom: 7px !important;
+}
+
+.close-div {
   display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  margin-top: 60px;
-  margin-bottom: 60px;
-  color: white;
+  flex-direction: row;
+  justify-content: flex-end;
+  margin: -10px -10px 0px 0px;
 }
 
-.dropdown {
-  width: 600px !important;
-  margin-bottom: 10px;
+.close-div mat-icon {
+  cursor: pointer;
+  transform: scale(0.9);
 }
 
-.block {
-  width: 100px;
-}
-
-::ng-deep .mat-form-field-appearance-fill .mat-form-field-flex {
-  background-color: #fff;
-  border-radius: 20px 20px 20px 20px !important;
-  padding: 0.75em 0.75em 0 0.75em;
-}
-
-.example-full-width {
-  height: 250%;
-  width: 600px;
-  margin-top: 1%;
-}
-
-.mint1Button {
-  height: 40px;
-  width: 15%;
-  align-items: center;
-  justify-content: center;
-  display: flex;
-  margin-left: 40%;
-  margin-top: -5%;
-  background-color: green;
-  color: white;
-  border-radius: 5%;
-}
-
-.example-card {
-  width: 700px;
-  height: 350px;
-  background: transparent;
-  color: white;
-  border: 3px solid #10ceac;
-  border-radius: 20px;
-}
-
-.txtbox {
-  border: 2px solid white;
-  padding: 10px;
-  color: white;
-}
-
-#collectionbtn {
-  border: 2px solid white;
-  width: 650px;
-  margin-left: 30px;
-  font-size: 22px;
-}
-
-#collectionbtn:hover {
-  background-color: #10ceac;
-  transition: 0.5s;
-}
-
-.upload-drop-zone {
-  margin-left: 150px;
+.close-div mat-icon:hover {
+  color: black;
 }
 
 .example-form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   width: 100%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+  row-gap: 20px;
+  /* background-color: #8484846b; */
 }
 
-.collection-header {
-  width: 80%;
-  margin-top: 60px;
-  margin-bottom: 60px;
-
-  text-align: center;
-  padding-bottom: 50px;
-  border-bottom: 1px solid white;
-}
-
-.collection-content {
-  width: 80%;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-
-/* default and hover color */
-::ng-deep .mat-form-field-appearance-outline .mat-form-field-outline {
-  color: #10ceac;
-  border-radius: 30px 30px 30px 30px !important;
-}
-
-/* focused color */
-::ng-deep
-  .mat-form-field-appearance-outline.mat-focused
-  .mat-form-field-outline-thick {
-  color: #10ceac;
-  border-radius: 30px 30px 30px 30px !important;
-}
-
-/* floating label color */
-::ng-deep .mat-form-field-appearance-outline.mat-focused .mat-form-field-label {
-  color: #10ceac;
-  border-radius: 30px 30px 30px 30px !important;
-}
-
-.btn-create-col {
-  background: #10ceac;
-  color: black;
-  font-size: medium;
-  border-radius: 20px;
-  padding-left: 40px;
-  padding-right: 40px;
-  float: right;
-}
-
-.back-icon {
-  transform: scale(1.6);
-  vertical-align: middle;
-  margin-right: 83%;
+.mint-form-group {
   position: relative;
-  top: 25px;
-  cursor: pointer;
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+}
+
+.input-field {
+  background: #f1f1f1;
+  border-radius: 16px;
+  width: 100%;
+  height: 58px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  overflow: hidden;
+  row-gap: 5px;
+}
+
+.input-field input {
+  height: 40px;
+  color: #000;
+  width: 95%;
+  font-size: 18px;
+  border: none;
+}
+
+.required {
+  color: rgba(215, 85, 85, 1);
 }
